crates/dlin-core/src/render/snapshots/dlin_core__render__json__tests__snapshot_json_with_sql.snap
---
source: src/render/json.rs
expression: output
---
{
  "nodes": [
    {
      "columns": [],
      "description": null,
      "exposure": null,
      "file_path": "models/orders.sql",
      "label": "orders",
      "materialization": "table",
      "node_type": "model",
      "sql_content": "SELECT * FROM {{ ref('stg_orders') }}",
      "tags": [],
      "unique_id": "model.orders"
    },
    {
      "columns": [],
      "description": null,
      "exposure": null,
      "file_path": null,
      "label": "raw.orders",
      "materialization": null,
      "node_type": "source",
      "sql_content": null,
      "tags": [],
      "unique_id": "source.raw.orders"
    }
  ],
  "edges": []
}
