crates/dlin-core/src/render/snapshots/dlin_core__render__json__tests__snapshot_lineage.snap
---
source: src/render/json.rs
expression: output
---
{
  "nodes": [
    {
      "columns": [],
      "description": null,
      "exposure": null,
      "file_path": null,
      "label": "dashboard",
      "materialization": null,
      "node_type": "exposure",
      "sql_content": null,
      "tags": [],
      "unique_id": "exposure.dashboard"
    },
    {
      "columns": [],
      "description": null,
      "exposure": null,
      "file_path": null,
      "label": "orders",
      "materialization": null,
      "node_type": "model",
      "sql_content": null,
      "tags": [],
      "unique_id": "model.orders"
    },
    {
      "columns": [],
      "description": null,
      "exposure": null,
      "file_path": null,
      "label": "stg_orders",
      "materialization": null,
      "node_type": "model",
      "sql_content": null,
      "tags": [],
      "unique_id": "model.stg_orders"
    },
    {
      "columns": [],
      "description": null,
      "exposure": null,
      "file_path": null,
      "label": "raw.orders",
      "materialization": null,
      "node_type": "source",
      "sql_content": null,
      "tags": [],
      "unique_id": "source.raw.orders"
    },
    {
      "columns": [],
      "description": null,
      "exposure": null,
      "file_path": null,
      "label": "orders_positive",
      "materialization": null,
      "node_type": "test",
      "sql_content": null,
      "tags": [],
      "unique_id": "test.orders_positive"
    }
  ],
  "edges": [
    {
      "source": "model.orders",
      "target": "exposure.dashboard",
      "edge_type": "exposure"
    },
    {
      "source": "model.orders",
      "target": "test.orders_positive",
      "edge_type": "test"
    },
    {
      "source": "model.stg_orders",
      "target": "model.orders",
      "edge_type": "ref"
    },
    {
      "source": "source.raw.orders",
      "target": "model.stg_orders",
      "edge_type": "source"
    }
  ]
}
