crates/dlin-core/src/render/snapshots/dlin_core__render__json__tests__snapshot_node_metadata.snap
---
source: src/render/json.rs
expression: output
---
{
  "nodes": [
    {
      "columns": [
        "order_id",
        "customer_id"
      ],
      "description": "Orders mart model",
      "exposure": null,
      "file_path": "models/orders.sql",
      "label": "orders",
      "materialization": "table",
      "node_type": "model",
      "sql_content": null,
      "tags": [
        "daily",
        "core"
      ],
      "unique_id": "model.orders"
    }
  ],
  "edges": []
}
